--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,82 @@
             flex-direction: row !important;
 
         }
+        :root body.light{
+            --primary: #006782;
+            --on-primary: #ffffff;
+            --primary-container: #baeaff;
+            --on-primary-container: #001f29;
+            --secondary: #4c616b;
+            --on-secondary: #ffffff;
+            --secondary-container: #cfe6f1;
+            --onsecondary-container: #071e26;
+            --tertiary: #5b5b7e;
+            --on-tertiary: #ffffff;
+            --tertiary-container: #e2dfff;
+            --ontertiary-container: #181837;
+            --error: #ba1a1a;
+            --on-error: #ffffff;
+            --error-container: #ffdad6;
+            --on-error-container: #410002;
+            --background: #fbfcfe;
+            --on-background: #191c1e;
+            --surface: #f8f9fb;
+            --on-surface: #191c1e;
+            --surface-variant: #dce4e8;
+            --onsurface-variant: #40484c;
+            --outline: #70787d;
+            --outline-variant: #c0c8cc;
+            --shadow: #000000;
+            --scrim: #000000;
+            --inverse-surface: #2e3132;
+            --inverse-onsurface: #eff1f3;
+            --inverse-primary: #5cd4ff;
+            --surface-dim: #d8dadc;
+            --surface-bright: #f8f9fb;
+            --surface-container-lowest: #ffffff;
+            --surface-container-low: #f2f4f5;
+            --surface-container: #eceef0;
+            --surface-container-high: #e7e8ea;
+            --surface-container-highest: #e1e3e4;
+        }
+        :root body.dark{
+            --primary: #5cd4ff;
+            --on-primary: #003545;
+            --primary-container: #004d62;
+            --on-primary-container: #baeaff;
+            --secondary: #b3cad5;
+            --on-secondary: #1e333c;
+            --secondary-container: #354a53;
+            --on-secondary-container: #cfe6f1;
+            --tertiary: #c4c3eb;
+            --on-tertiary: #2d2d4d;
+            --tertiary-container: #444465;
+            --on-tertiary-container: #e2dfff;
+            --error: #ffb4ab;
+            --on-error: #690005;
+            --error-container: #93000a;
+            --on-error-container: #ffb4ab;
+            --background: #191c1e;
+            --on-background: #e1e3e4;
+            --surface: #111415;
+            --on-surface: #e1e3e4;
+            --surface-variant: #40484c;
+            --on-surface-variant: #c0c8cc;
+            --outline: #8a9296;
+            --outline-variant: #40484c;
+            --shadow: #000000;
+            --scrim: #000000;
+            --inverse-surface: #e1e3e4;
+            --inverse-on-surface: #2e3132;
+            --inverse-primary: #006782;
+            --surface-dim: #111415;
+            --surface-bright: #373a3b;
+            --surface-container-lowest: #0c0f10;
+            --surface-container-low: #191c1e;
+            --surface-container: #1d2022;
+            --surface-container-high: #272a2c;
+            --surface-container-highest: #323537;
+        }
 
 
     </style>
