add profile icons (github identicons)

--- a/static/index.html
+++ b/static/index.html
@@ -169,8 +169,8 @@
 </header>
 
 <nav class="m l left " style="overflow-x: hidden;">
-    <a onclick="onUserAccountClick()">
-        <i>account_circle</i>
+    <a onclick="onUserAccountClick()" class="account">
+
         <div>Your Account</div>
     </a>
     <a onClick="shareButton()">
@@ -187,9 +187,8 @@
 </nav>
 
 <nav class="s bottom">
-    <a onclick="onUserAccountClick()">
+    <a onclick="onUserAccountClick()" class="account">
         <i>account_circle</i>
-        <div>Your Account</div>
     </a>
 
     <a onClick="shareButton()">
